add: entity classes for Company, Individual, and Person with Jmix

--- a/src/main/resources/com/github/edurbs/cleanstock/messages_en.properties
+++ b/src/main/resources/com/github/edurbs/cleanstock/messages_en.properties
@@ -1,5 +1,26 @@
 databaseUniqueConstraintViolation.IDX_USER__ON_USERNAME=A user with the same username already exists
 
+com.github.edurbs.cleanstock.entity/Company=Company
+com.github.edurbs.cleanstock.entity/Company.cnpj=Cnpj
+com.github.edurbs.cleanstock.entity/Company.legalName=Legal name
+com.github.edurbs.cleanstock.entity/Company.operationStartDate=Operation start date
+com.github.edurbs.cleanstock.entity/Company.tradingName=Trading name
+com.github.edurbs.cleanstock.entity/Individual=Individual
+com.github.edurbs.cleanstock.entity/Individual.birthDate=Birth date
+com.github.edurbs.cleanstock.entity/Individual.cpf=Cpf
+com.github.edurbs.cleanstock.entity/Individual.firstName=First name
+com.github.edurbs.cleanstock.entity/Individual.lastName=Last name
+com.github.edurbs.cleanstock.entity/Person=Person
+com.github.edurbs.cleanstock.entity/Person.createdBy=Created by
+com.github.edurbs.cleanstock.entity/Person.createdDate=Created date
+com.github.edurbs.cleanstock.entity/Person.customer=Customer
+com.github.edurbs.cleanstock.entity/Person.email=Email
+com.github.edurbs.cleanstock.entity/Person.id=Id
+com.github.edurbs.cleanstock.entity/Person.lastModifiedBy=Last modified by
+com.github.edurbs.cleanstock.entity/Person.lastModifiedDate=Last modified date
+com.github.edurbs.cleanstock.entity/Person.lastPurchaseDate=Last purchase date
+com.github.edurbs.cleanstock.entity/Person.phone=Phone
+com.github.edurbs.cleanstock.entity/Person.supplier=Supplier
 com.github.edurbs.cleanstock.entity/Product=Product
 com.github.edurbs.cleanstock.entity/Product.description=Description
 com.github.edurbs.cleanstock.entity/Product.id=Id
