add: consumer, supplier and product

--- a/src/main/resources/com/github/edurbs/cleanstock/messages_en.properties
+++ b/src/main/resources/com/github/edurbs/cleanstock/messages_en.properties
@@ -1,63 +1,66 @@
-databaseUniqueConstraintViolation.IDX_USER__ON_USERNAME=A user with the same username already exists
+com.github.edurbs.cleanstock.core.mainview/MainView.title=CleanStock
+com.github.edurbs.cleanstock.core.mainview/applicationTitle.text=CleanStock
+com.github.edurbs.cleanstock.core.mainview/drawerToggle.ariaLabel=Menu toggle
+com.github.edurbs.cleanstock.core.mainview/navigation.ariaLabel=Views
 
-com.github.edurbs.cleanstock.entity/Company=Company
-com.github.edurbs.cleanstock.entity/Company.cnpj=Cnpj
-com.github.edurbs.cleanstock.entity/Company.legalName=Legal name
-com.github.edurbs.cleanstock.entity/Company.operationStartDate=Operation start date
-com.github.edurbs.cleanstock.entity/Company.tradingName=Trading name
-com.github.edurbs.cleanstock.entity/Individual=Individual
-com.github.edurbs.cleanstock.entity/Individual.birthDate=Birth date
-com.github.edurbs.cleanstock.entity/Individual.cpf=Cpf
-com.github.edurbs.cleanstock.entity/Individual.firstName=First name
-com.github.edurbs.cleanstock.entity/Individual.lastName=Last name
-com.github.edurbs.cleanstock.entity/Person=Person
-com.github.edurbs.cleanstock.entity/Person.createdBy=Created by
-com.github.edurbs.cleanstock.entity/Person.createdDate=Created date
-com.github.edurbs.cleanstock.entity/Person.customer=Customer
-com.github.edurbs.cleanstock.entity/Person.email=Email
-com.github.edurbs.cleanstock.entity/Person.id=Id
-com.github.edurbs.cleanstock.entity/Person.lastModifiedBy=Last modified by
-com.github.edurbs.cleanstock.entity/Person.lastModifiedDate=Last modified date
-com.github.edurbs.cleanstock.entity/Person.lastPurchaseDate=Last purchase date
-com.github.edurbs.cleanstock.entity/Person.phone=Phone
-com.github.edurbs.cleanstock.entity/Person.supplier=Supplier
-com.github.edurbs.cleanstock.entity/Product=Product
-com.github.edurbs.cleanstock.entity/Product.description=Description
-com.github.edurbs.cleanstock.entity/Product.id=Id
-com.github.edurbs.cleanstock.entity/Product.price=Price
-com.github.edurbs.cleanstock.entity/User=User
-com.github.edurbs.cleanstock.entity/User.id=ID
-com.github.edurbs.cleanstock.entity/User.username=Username
-com.github.edurbs.cleanstock.entity/User.firstName=First name
-com.github.edurbs.cleanstock.entity/User.lastName=Last name
-com.github.edurbs.cleanstock.entity/User.password=Password
-com.github.edurbs.cleanstock.entity/User.email=Email
-com.github.edurbs.cleanstock.entity/User.timeZoneId=Time zone
-com.github.edurbs.cleanstock.entity/User.active=Active
-com.github.edurbs.cleanstock.entity/User.version=Version
+com.github.edurbs.cleanstock.slices.person.ui/consumerDetailView.title=Consumer
+com.github.edurbs.cleanstock.slices.person.ui/consumerListView.title=Consumers
+com.github.edurbs.cleanstock.slices.person.ui/supplierDetailView.title=Supplier
+com.github.edurbs.cleanstock.slices.person.ui/supplierListView.title=Suppliers
 
-com.github.edurbs.cleanstock.view.main/MainView.title=CleanStock
-com.github.edurbs.cleanstock.view.main/applicationTitle.text=CleanStock
-com.github.edurbs.cleanstock.view.main/navigation.ariaLabel=Views
-com.github.edurbs.cleanstock.view.main/drawerToggle.ariaLabel=Menu toggle
 
-com.github.edurbs.cleanstock.view.login/LoginView.title=Login - CleanStock
-com.github.edurbs.cleanstock.view.login/loginForm.headerTitle=CleanStock
-com.github.edurbs.cleanstock.view.login/loginForm.username=Username
-com.github.edurbs.cleanstock.view.login/loginForm.password=Password
-com.github.edurbs.cleanstock.view.login/loginForm.submit=Log in
-com.github.edurbs.cleanstock.view.login/loginForm.forgotPassword=Forgot password
-com.github.edurbs.cleanstock.view.login/loginForm.errorTitle=Login failed
-com.github.edurbs.cleanstock.view.login/loginForm.badCredentials=Check that you have entered the correct username and password and try again
-com.github.edurbs.cleanstock.view.login/loginForm.errorUsername=Username is required
-com.github.edurbs.cleanstock.view.login/loginForm.errorPassword=Password is required
-com.github.edurbs.cleanstock.view.login/loginForm.rememberMe=Remember me
+com.github.edurbs.cleanstock.slices.person/Person.birthDate=Dt. Nascimento/início
+com.github.edurbs.cleanstock.slices.person/Person.name=Nome/Razão social
+com.github.edurbs.cleanstock.slices.person/Person.nickName=Nome social/fantasia
+com.github.edurbs.cleanstock.slices.person/Person.personType=Tipo
+com.github.edurbs.cleanstock.slices.person/Person.taxId=CPF/CNPJ
+com.github.edurbs.cleanstock.slices.person/PersonType.COMPANY=Jurídica
+com.github.edurbs.cleanstock.slices.person/PersonType.INDIVIDUAL=Física
 
-com.github.edurbs.cleanstock.view.user/UserListView.title=Users
-com.github.edurbs.cleanstock.view.user/UserDetailView.title=User
-com.github.edurbs.cleanstock.view.user/confirmPassword=Confirm password
-com.github.edurbs.cleanstock.view.user/passwordsDoNotMatch=Passwords do not match
-com.github.edurbs.cleanstock.view.user/additionalMenu=Additional
-com.github.edurbs.cleanstock.view.user/noAssignedRolesNotification=Assign roles to the new user
+
+com.github.edurbs.cleanstock.slices.product.ui/productDetailView.title=Product
+com.github.edurbs.cleanstock.slices.product.ui/productListView.title=Products
+
+com.github.edurbs.cleanstock.slices.product/Product=Product
+com.github.edurbs.cleanstock.slices.product/Product.createdBy=Created by
+com.github.edurbs.cleanstock.slices.product/Product.createdDate=Created date
+com.github.edurbs.cleanstock.slices.product/Product.description=Description
+com.github.edurbs.cleanstock.slices.product/Product.id=Id
+com.github.edurbs.cleanstock.slices.product/Product.lastModifiedBy=Last modified by
+com.github.edurbs.cleanstock.slices.product/Product.lastModifiedDate=Last modified date
+com.github.edurbs.cleanstock.slices.product/Product.minimumStock=Minimum stock
+com.github.edurbs.cleanstock.slices.product/Product.quantityForWholesale=Quantity for wholesale
+com.github.edurbs.cleanstock.slices.product/Product.retailPrice=Retail price
+com.github.edurbs.cleanstock.slices.product/Product.stock=Stock
+com.github.edurbs.cleanstock.slices.product/Product.wholesalePrice=Wholesale price
+
+com.github.edurbs.cleanstock.slices.user.ui/LoginView.title=Login - CleanStock
+com.github.edurbs.cleanstock.slices.user.ui/UserDetailView.title=User
+com.github.edurbs.cleanstock.slices.user.ui/UserListView.title=Users
+com.github.edurbs.cleanstock.slices.user.ui/additionalMenu=Additional
+com.github.edurbs.cleanstock.slices.user.ui/confirmPassword=Confirm password
+com.github.edurbs.cleanstock.slices.user.ui/loginForm.badCredentials=Check that you have entered the correct username and password and try again
+com.github.edurbs.cleanstock.slices.user.ui/loginForm.errorPassword=Password is required
+com.github.edurbs.cleanstock.slices.user.ui/loginForm.errorTitle=Login failed
+com.github.edurbs.cleanstock.slices.user.ui/loginForm.errorUsername=Username is required
+com.github.edurbs.cleanstock.slices.user.ui/loginForm.forgotPassword=Forgot password
+com.github.edurbs.cleanstock.slices.user.ui/loginForm.headerTitle=CleanStock
+com.github.edurbs.cleanstock.slices.user.ui/loginForm.password=Password
+com.github.edurbs.cleanstock.slices.user.ui/loginForm.rememberMe=Remember me
+com.github.edurbs.cleanstock.slices.user.ui/loginForm.submit=Log in
+com.github.edurbs.cleanstock.slices.user.ui/loginForm.username=Username
+com.github.edurbs.cleanstock.slices.user.ui/noAssignedRolesNotification=Assign roles to the new user
+com.github.edurbs.cleanstock.slices.user.ui/passwordsDoNotMatch=Passwords do not match
+
+com.github.edurbs.cleanstock.slices.user/User=User
+com.github.edurbs.cleanstock.slices.user/User.active=Active
+com.github.edurbs.cleanstock.slices.user/User.email=Email
+com.github.edurbs.cleanstock.slices.user/User.firstName=First name
+com.github.edurbs.cleanstock.slices.user/User.id=ID
+com.github.edurbs.cleanstock.slices.user/User.lastName=Last name
+com.github.edurbs.cleanstock.slices.user/User.password=Password
+com.github.edurbs.cleanstock.slices.user/User.timeZoneId=Time zone
+com.github.edurbs.cleanstock.slices.user/User.username=Username
+com.github.edurbs.cleanstock.slices.user/User.version=Version
 
 com.github.edurbs.cleanstock/menu.application.title=Application
