add: product transactions

--- a/src/main/resources/com/github/edurbs/cleanstock/messages_pt_BR.properties
+++ b/src/main/resources/com/github/edurbs/cleanstock/messages_pt_BR.properties
@@ -3,6 +3,9 @@ com.github.edurbs.cleanstock.core.mainview/applicationTitle.text=CleanStock
 com.github.edurbs.cleanstock.core.mainview/drawerToggle.ariaLabel=Menu alternar
 com.github.edurbs.cleanstock.core.mainview/navigation.ariaLabel=Visualizações
 
+
+
+
 com.github.edurbs.cleanstock.slices.person.ui/consumerDetailView.title=Consumidor
 com.github.edurbs.cleanstock.slices.person.ui/consumerListView.title=Consumidores
 com.github.edurbs.cleanstock.slices.person.ui/supplierDetailView.title=Fornecedor
@@ -32,6 +35,35 @@ com.github.edurbs.cleanstock.slices.product/Product.retailPrice=Preço de varejo
 com.github.edurbs.cleanstock.slices.product/Product.stock=Estoque
 com.github.edurbs.cleanstock.slices.product/Product.wholesalePrice=Preço de atacado
 
+
+com.github.edurbs.cleanstock.slices.producttransaction/TransactionItem=Movement item
+com.github.edurbs.cleanstock.slices.producttransaction/TransactionItem.id=Id
+com.github.edurbs.cleanstock.slices.producttransaction/TransactionItem.priceType=Tipo de preço
+com.github.edurbs.cleanstock.slices.producttransaction/TransactionItem.product=Product
+com.github.edurbs.cleanstock.slices.producttransaction/TransactionItem.productMovement=Product movement
+com.github.edurbs.cleanstock.slices.producttransaction/TransactionItem.quantity=Quantity
+com.github.edurbs.cleanstock.slices.producttransaction/TransactionItem.totalPrice=Total price
+com.github.edurbs.cleanstock.slices.producttransaction/TransactionItem.unitPrice=Unit price
+com.github.edurbs.cleanstock.slices.producttransaction/PriceType=Price type
+com.github.edurbs.cleanstock.slices.producttransaction/PriceType.RETAIL=Varejo
+com.github.edurbs.cleanstock.slices.producttransaction/PriceType.WHOLESALE=Atacado
+com.github.edurbs.cleanstock.slices.producttransaction/ProductTransaction=Product movement
+com.github.edurbs.cleanstock.slices.producttransaction/ProductTransaction.createdBy=Created by
+com.github.edurbs.cleanstock.slices.producttransaction/ProductTransaction.createdDate=Created date
+com.github.edurbs.cleanstock.slices.producttransaction/ProductTransaction.id=Id
+com.github.edurbs.cleanstock.slices.producttransaction/ProductTransaction.items=Items
+com.github.edurbs.cleanstock.slices.producttransaction/ProductTransaction.lastModifiedBy=Last modified by
+com.github.edurbs.cleanstock.slices.producttransaction/ProductTransaction.lastModifiedDate=Last modified date
+com.github.edurbs.cleanstock.slices.producttransaction/ProductTransaction.notes=Notes
+com.github.edurbs.cleanstock.slices.producttransaction/ProductTransaction.referenceNumber=Reference number
+com.github.edurbs.cleanstock.slices.producttransaction/ProductTransaction.shippingCost=Shipping cost
+com.github.edurbs.cleanstock.slices.producttransaction/ProductTransaction.transactionStatus=Status da transação
+com.github.edurbs.cleanstock.slices.producttransaction/Purchase=Purchase
+com.github.edurbs.cleanstock.slices.producttransaction/Purchase.supplier=Supplier
+com.github.edurbs.cleanstock.slices.producttransaction/Sale=Sale
+com.github.edurbs.cleanstock.slices.producttransaction/Sale.customer=Customer
+com.github.edurbs.cleanstock.slices.producttransaction/TransactionStatus=Transaction status
+
 com.github.edurbs.cleanstock.slices.user.ui/LoginView.title=Login - CleanStock
 com.github.edurbs.cleanstock.slices.user.ui/UserDetailView.title=Usuário
 com.github.edurbs.cleanstock.slices.user.ui/UserListView.title=Usuários
@@ -60,6 +92,8 @@ com.github.edurbs.cleanstock.slices.user/User.password=Senha
 com.github.edurbs.cleanstock.slices.user/User.timeZoneId=Fuso horário
 com.github.edurbs.cleanstock.slices.user/User.username=Nome de usuário
 com.github.edurbs.cleanstock.slices.user/User.version=Versão
+
+com.github.edurbs.cleanstock.view.producttransaction/productTransactionListView.title=Transações de produtos
 
 com.github.edurbs.cleanstock/menu.application.title=Aplicativo
 validation.required.defaultMsg = %s é obrigatório
